# xml-include

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml  rust.yaml
src/: error.rs  lib.rs  processor.rs
tests/: test_resolve.rs
tests/examples/: CommonTypes.xml  TradingApi.ref.xml  TradingApi.xml
